--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <header class="site-header">
     <div class="header-brand">
       <a href="index.html" class="logo">Gaspel</a>
-      <p class="tagline">Donde la construcción encuentra soluciones</p>
     </div>
     <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav">☰</button>
     <nav class="primary-nav" id="primary-nav">
@@ -25,32 +24,41 @@
   <main>
     <section class="hero">
       <div class="hero-content">
-        <h1>Soluciones integrales para cada proyecto</h1>
+        <h1>Donde la construcción encuentra soluciones</h1>
         <p>Asesoramiento experto, productos de confianza y logística eficiente para obras de todos los tamaños.</p>
         <div class="hero-actions">
           <a class="btn btn-primary" href="plp.html">Comprar ahora</a>
           <a class="btn btn-outline" href="#asesoria">Solicitar asesoría</a>
         </div>
       </div>
-      <div class="hero-media" role="presentation">
-        <img src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?auto=format&fit=crop&w=900&q=80" alt="Profesionales revisando planos" />
+      <div class="hero-media">
+        <img src="assets/img/logo-gaspel.svg" alt="Logo Gaspel" />
       </div>
     </section>
 
     <section class="value-props" id="empresa">
       <h2>Por qué elegir Gaspel</h2>
       <div class="prop-grid">
-        <article>
-          <h3>Calidad garantizada</h3>
-          <p>Trabajamos con marcas líderes del mercado y garantizamos la autenticidad de cada producto.</p>
+        <article class="value-card">
+          <span class="prop-icon" aria-hidden="true">✓</span>
+          <div>
+            <h3>Calidad garantizada</h3>
+            <p>Trabajamos con marcas líderes y controlamos cada entrega para que llegue perfecta a tu obra.</p>
+          </div>
         </article>
-        <article>
-          <h3>Variedad para cada proyecto</h3>
-          <p>Más de 2.000 productos para baños, cocinas, revestimientos y soluciones sanitarias.</p>
+        <article class="value-card">
+          <span class="prop-icon" aria-hidden="true">∞</span>
+          <div>
+            <h3>Variedad para tu proyecto</h3>
+            <p>Más de 2.000 productos entre sanitarios, cocinas y revestimientos listos para combinar.</p>
+          </div>
         </article>
-        <article>
-          <h3>Asesoría técnica</h3>
-          <p>Equipo de especialistas disponible para acompañar tu compra y resolver dudas en tiempo real.</p>
+        <article class="value-card">
+          <span class="prop-icon" aria-hidden="true">💬</span>
+          <div>
+            <h3>Asesoría técnica</h3>
+            <p>Especialistas disponibles en cada paso para ayudarte a definir materiales, medidas y timings.</p>
+          </div>
         </article>
       </div>
     </section>
@@ -61,20 +69,16 @@
         <a class="link" href="plp.html">Ver todos los productos</a>
       </div>
       <div class="category-grid">
-        <a class="category-card" href="plp.html?category=banos">
-          <img src="https://images.unsplash.com/photo-1600585154340-0ef3c08ac11b?auto=format&fit=crop&w=600&q=80" alt="Baños" />
-          <h3>Baños</h3>
-        </a>
         <a class="category-card" href="plp.html?category=cocinas">
-          <img src="https://images.unsplash.com/photo-1600585154526-990dced4db0d?auto=format&fit=crop&w=600&q=80" alt="Cocinas" />
+          <img src="assets/img/categorias/cocinas.svg" alt="Cocinas" />
           <h3>Cocinas</h3>
         </a>
         <a class="category-card" href="plp.html?category=revestimientos">
-          <img src="https://images.unsplash.com/photo-1505693314120-9e7b0b92f58b?auto=format&fit=crop&w=600&q=80" alt="Revestimientos" />
+          <img src="assets/img/categorias/revestimientos.svg" alt="Revestimientos" />
           <h3>Revestimientos</h3>
         </a>
         <a class="category-card" href="plp.html?category=sanitarios">
-          <img src="https://images.unsplash.com/photo-1598300056393-4aac492f434d?auto=format&fit=crop&w=600&q=80" alt="Sanitarios" />
+          <img src="assets/img/categorias/sanitarios.svg" alt="Sanitarios" />
           <h3>Sanitarios</h3>
         </a>
       </div>
