--- a/pdp-ceramica.html
+++ b/pdp-ceramica.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vanitory | Gaspel</title>
+  <title>Cerámica Cañuelas Potenza | Gaspel</title>
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body class="pdp">
@@ -23,34 +23,34 @@
   <main class="pdp-content">
     <nav class="breadcrumbs" aria-label="Breadcrumb">
       <a href="index.html">Inicio</a>
-      <a href="plp.html">Baños</a>
-      <span aria-current="page">Vanitory Nordik 80 cm</span>
+      <a href="plp.html?category=revestimientos">Revestimientos</a>
+      <span aria-current="page">Cerámica Potenza Negro 50x50</span>
     </nav>
 
     <section class="pdp-hero">
       <div class="pdp-gallery">
-        <img id="main-image" src="assets/img/pdp/vanitory_1.jpg" alt="Vanitory Nordik vista frontal" />
+        <img id="main-image" src="assets/img/pdp/ceramica_1.jpg" alt="Cerámica Potenza Negro 50x50" />
         <div class="thumbnail-list">
-          <button class="thumbnail active" data-image="assets/img/pdp/vanitory_1.jpg">
-            <img src="assets/img/pdp/vanitory_1.jpg" alt="Detalle frontal" />
+          <button class="thumbnail active" data-image="assets/img/pdp/ceramica_1.jpg">
+            <img src="assets/img/pdp/ceramica_1.jpg" alt="Muestra frontal de cerámica Potenza" />
           </button>
-          <button class="thumbnail" data-image="assets/img/pdp/vanitory_2.jpg">
-            <img src="assets/img/pdp/vanitory_2.jpg" alt="Cajones abiertos" />
+          <button class="thumbnail" data-image="assets/img/pdp/ceramica_2.jpg">
+            <img src="assets/img/pdp/ceramica_2.jpg" alt="Detalle de vetas doradas" />
           </button>
-          <button class="thumbnail" data-image="assets/img/pdp/vanitory_3.jpg">
-            <img src="assets/img/pdp/vanitory_3.jpg" alt="Vanitory instalado" />
+          <button class="thumbnail" data-image="assets/img/pdp/ceramica_3.jpg">
+            <img src="assets/img/pdp/ceramica_3.jpg" alt="Cerámica instalada en cocina" />
           </button>
         </div>
       </div>
 
       <div class="pdp-summary">
-        <h1>Vanitory Nordik 80 cm</h1>
-        <p class="brand">Marca: Olmo</p>
-        <p class="price">$418.099</p>
-        <p class="installments">12 cuotas fijas de $45.700</p>
-        <p class="stock in-stock">Disponible · entrega en 72 hs</p>
+        <h1>Cerámica Cañuelas Potenza Negro 50x50</h1>
+        <p class="brand">Marca: Cañuelas</p>
+        <p class="price">$10.608 / m²</p>
+        <p class="installments">3 cuotas sin interés de $3.700</p>
+        <p class="stock in-stock">Disponible · retiro en 48 hs</p>
         <div class="pdp-actions">
-          <label for="quantity">Cantidad</label>
+          <label for="quantity">Cajas</label>
           <div class="quantity-selector">
             <button type="button" data-action="decrement">-</button>
             <input id="quantity" type="number" min="1" value="1" />
@@ -60,9 +60,9 @@
           <button class="btn btn-outline favorite">Agregar a favoritos</button>
         </div>
         <ul class="benefits">
-          <li>Envío gratis en CABA y GBA</li>
-          <li>Garantía oficial 5 años</li>
-          <li>Asesoría profesional incluida</li>
+          <li>Cada caja rinde 1.5 m²</li>
+          <li>Apto para pisos y paredes interiores</li>
+          <li>Textura antideslizante suave</li>
         </ul>
       </div>
     </section>
@@ -75,21 +75,23 @@
       </div>
       <article id="descripcion" class="tab-panel active" role="tabpanel">
         <h2>Descripción</h2>
-        <p>El Vanitory Nordik combina diseño minimalista con materiales resistentes a la humedad. Incluye bacha de apoyo y espacios de guardado optimizados para baños medianos.</p>
+        <p>La Cerámica Potenza Negro de Cañuelas combina el brillo profundo del mármol con vetas metálicas que elevan cualquier ambiente. Su formato 50x50 cm permite una instalación ágil y continua en cocinas, livings o locales comerciales.</p>
         <ul>
-          <li>Terminación en melamina premium</li>
-          <li>Incluye herrajes soft-close</li>
-          <li>Espacio interno modular</li>
+          <li>Acabado brillante con vetas cobre y plata</li>
+          <li>Resistencia a manchas y agentes químicos domésticos</li>
+          <li>Ideal para pisos de alto tránsito y paredes destacadas</li>
         </ul>
       </article>
       <article id="ficha" class="tab-panel" role="tabpanel" hidden>
         <h2>Ficha técnica</h2>
         <table>
           <tbody>
-            <tr><th>Dimensiones</th><td>80 x 45 x 85 cm</td></tr>
-            <tr><th>Material</th><td>MDF hidrófugo con laqueado mate</td></tr>
-            <tr><th>Peso</th><td>32 kg</td></tr>
-            <tr><th>Incluye</th><td>Bacha, grifería mono comando, kit de instalación</td></tr>
+            <tr><th>Formato</th><td>50 x 50 cm</td></tr>
+            <tr><th>Espesor</th><td>9 mm</td></tr>
+            <tr><th>Rendimiento</th><td>1.5 m² por caja (6 piezas)</td></tr>
+            <tr><th>Absorción</th><td>&lt; 0.5%</td></tr>
+            <tr><th>Uso recomendado</th><td>Pisos y paredes interiores</td></tr>
+            <tr><th>Acabado</th><td>Brillante tipo mármol</td></tr>
           </tbody>
         </table>
         <a class="btn btn-outline" href="#">Descargar ficha PDF</a>
@@ -98,17 +100,17 @@
         <h2>Reviews de clientes</h2>
         <div class="review">
           <div class="review-header">
-            <strong>Ana R.</strong>
+            <strong>Mariela G.</strong>
             <span>★★★★★</span>
           </div>
-          <p>Excelente calidad y terminaciones. Llegó antes de lo esperado.</p>
+          <p>Lo colocamos en la cocina y el efecto mármol quedó espectacular. Fácil de limpiar.</p>
         </div>
         <div class="review">
           <div class="review-header">
-            <strong>Julián P.</strong>
+            <strong>Lucas S.</strong>
             <span>★★★★☆</span>
           </div>
-          <p>Muy fácil de instalar y perfecto para espacios reducidos.</p>
+          <p>Muy buena relación precio-calidad. Recomiendo usar junta mínima para mejor efecto.</p>
         </div>
       </article>
     </section>
@@ -117,16 +119,16 @@
       <h2>Productos relacionados</h2>
       <div class="products-grid">
         <article class="product-card">
-          <img src="assets/img/pdp/vanitory_schneider.jpg" alt="Vanitory Schneider" />
-          <h3>Vanitory Schneider Studio</h3>
-          <p>$355.900</p>
-          <a class="btn btn-outline" href="pdp.html">Ver detalles</a>
+          <img src="assets/img/pdp/ceramica_carrara.jpg" alt="Cerámica estilo Carrara" />
+          <h3>Cerámica Carrara</h3>
+          <p>$12.480 / m²</p>
+          <a class="btn btn-outline" href="pdp-ceramica.html">Ver detalles</a>
         </article>
         <article class="product-card">
-          <img src="assets/img/pdp/vanitory_bernova.jpg" alt="Vanitory Bernova" />
-          <h3>Vanitory Bernova Pure</h3>
-          <p>$289.500</p>
-          <a class="btn btn-outline" href="pdp.html">Ver detalles</a>
+          <img src="assets/img/pdp/ceramica_calacatta.jpg" alt="Cerámica estilo Calacatta" />
+          <h3>Cerámica Calacatta</h3>
+          <p>$15.200 / m²</p>
+          <a class="btn btn-outline" href="pdp-ceramica.html">Ver detalles</a>
         </article>
       </div>
     </section>
